--- a/spring-cubix/templates/deployment.yaml
+++ b/spring-cubix/templates/deployment.yaml
@@ -31,6 +31,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          startupProbe:
+            periodSeconds: 5
+            failureThreshold: 5
+            exec:
+              command:
+                - ls
           env:
           - name: JAVA_OPTS
             value: {{ .Values.javaOpts | quote }}
